@@ -1,3 +1,8 @@
+2007-02-03  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* aclocal.m4 (grub_CHECK_STACK_PROTECTOR): New definition.
+	* configure.ac: Use it for testing the HOST and TARGET compilers.
+
 2006-12-13  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makefile.in (enable_grub_emu): New variable.
